Task2_Three-tier-Application-Deployment/k8s_manifests/mongo/networkpolicy_deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongo-deny-all
  namespace: workshop
spec:
  podSelector:
    matchLabels:
      app: mongodb
  policyTypes:
    - Ingress
